crates/core-subsystem/core-resolver/src/validation/snapshots/multi_operations_valid-2.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
expression: value
---
Ok(
    ValidatedOperation {
        name: Some(
            "concert2",
        ),
        typ: Query,
        fields: [
            ValidatedField {
                alias: None,
                name: Name(
                    "concert",
                ),
                arguments: {
                    "id": Number(
                        Number(2),
                    ),
                },
                subfields: [
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "id",
                        ),
                        arguments: {},
                        subfields: [],
                    },
                    ValidatedField {
                        alias: Some(
                            Name(
                                "headLine",
                            ),
                        ),
                        name: Name(
                            "title",
                        ),
                        arguments: {},
                        subfields: [],
                    },
                ],
            },
        ],
    },
)
