crates/core-subsystem/core-resolver/src/validation/snapshots/query_depth_limit_direct.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
expression: value
---
Ok(
    ValidatedOperation {
        name: None,
        typ: Query,
        fields: [
            ValidatedField {
                alias: None,
                name: Name(
                    "concerts",
                ),
                arguments: {},
                subfields: [
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "venue",
                        ),
                        arguments: {},
                        subfields: [
                            ValidatedField {
                                alias: None,
                                name: Name(
                                    "concerts",
                                ),
                                arguments: {},
                                subfields: [
                                    ValidatedField {
                                        alias: None,
                                        name: Name(
                                            "venue",
                                        ),
                                        arguments: {},
                                        subfields: [
                                            ValidatedField {
                                                alias: None,
                                                name: Name(
                                                    "concerts",
                                                ),
                                                arguments: {},
                                                subfields: [
                                                    ValidatedField {
                                                        alias: None,
                                                        name: Name(
                                                            "id",
                                                        ),
                                                        arguments: {},
                                                        subfields: [],
                                                    },
                                                ],
                                            },
                                        ],
                                    },
                                ],
                            },
                        ],
                    },
                ],
            },
        ],
    },
)
