crates/core-subsystem/core-resolver/src/validation/snapshots/query_depth_limit_through_fragment-2.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
expression: value
---
Err(
    SelectionSetTooDeep(
        Pos(14:25),
    ),
)
