crates/core-subsystem/core-resolver/src/validation/snapshots/query_depth_limit_through_fragment.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Ok(
    ValidatedOperation {
        name: None,
        typ: Query,
        fields: [
            ValidatedField {
                alias: None,
                name: Name(
                    "concerts",
                ),
                arguments: {},
                subfields: [
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "venue",
                        ),
                        arguments: {},
                        subfields: [
                            ValidatedField {
                                alias: None,
                                name: Name(
                                    "concerts",
                                ),
                                arguments: {},
                                subfields: [
                                    ValidatedField {
                                        alias: None,
                                        name: Name(
                                            "venue",
                                        ),
                                        arguments: {},
                                        subfields: [
                                            ValidatedField {
                                                alias: None,
                                                name: Name(
                                                    "concerts",
                                                ),
                                                arguments: {},
                                                subfields: [
                                                    ValidatedField {
                                                        alias: None,
                                                        name: Name(
                                                            "id",
                                                        ),
                                                        arguments: {},
                                                        subfields: [],
                                                    },
                                                ],
                                            },
                                        ],
                                    },
                                ],
                            },
                        ],
                    },
                ],
            },
        ],
    },
)
