crates/core-subsystem/core-resolver/src/validation/snapshots/stray_argument_invalid.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Err(
    StrayArguments(
        [
            "foo",
        ],
        "concert",
        Pos(3:17),
    ),
)
