crates/core-subsystem/core-resolver/src/validation/snapshots/unmergeable_leaf_fields_all_aliases.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
expression: value
---
Err(
    MergeFields(
        "t",
        [
            Pos(4:21),
            Pos(6:21),
        ],
    ),
)
