crates/core-subsystem/core-resolver/src/validation/snapshots/unmergeable_leaf_fields_mixed_aliases.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
expression: value
---
Err(
    MergeFields(
        "id",
        [
            Pos(4:21),
            Pos(5:21),
        ],
    ),
)
