crates/core-subsystem/core-resolver/src/validation/snapshots/unmergeable_non_leaf_fields.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
expression: value
---
Err(
    MergeFields(
        "venue",
        [
            Pos(5:21),
            Pos(9:21),
        ],
    ),
)
